--- a/express/styles/styles.css
+++ b/express/styles/styles.css
@@ -784,7 +784,7 @@ main [data-audience] {
   display: none;
 }
 
-body[data-device="mobile"] main [data-audience="mobile"][data-section-status="loaded"],
+body[data-device="mobile"] main [data-audience="mobile"][data-section-status="loaded"]:not(.split-action-container),
 body[data-device="desktop"] main [data-audience="desktop"][data-section-status="loaded"] {
   display: block;
 }
